--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -8,24 +8,24 @@
   <div class="sm:flex sm:justify-between sm:gap-4">
     <div>
       <h3 class="text-lg font-bold text-gray-900 sm:text-xl">
-        Building a SaaS product as a software developer
+        {{ comment.user.name }}
       </h3>
     </div>
   </div>
 
   <div class="mt-4">
     <p class="text-sm text-gray-500">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. At velit illum
-      provident a, ipsa maiores deleniti consectetur nobis et eaque.
+      {{ comment.text }}
     </p>
   </div>
 
   <dl class="mt-6 flex justify-end gap-4 sm:gap-2">
-    <a
+    <button
+      (click)="toggleReplying()"
       class="inline-block rounded border border-current px-6 py-4 text-xs font-medium text-indigo-600 transition hover:scale-110 hover:shadow-xl focus:outline-none focus:ring active:text-indigo-500"
     >
       Reply
-    </a>
+    </button>
     <a
       class="inline-block rounded border border-current px-3 py-3 text-xs font-medium text-indigo-600 transition hover:scale-110 hover:shadow-xl focus:outline-none focus:ring active:text-indigo-500 flex flex-row gap-2 justify-center align-middle"
     >
@@ -48,7 +48,7 @@
     <button
       type="button"
       class="duration-200"
-      [class.rotate-180]="isExpand"
+      [class.rotate-180]="isExpand()"
       (click)="toggleExpanded()"
     >
       <svg
@@ -68,8 +68,19 @@
     </button>
   </dl>
 
-  <section class="nested-comments">
-    <div class="text-xl">This shows de nested comments</div>
+  <section class="my-4 mx-2" *ngIf="isReplying()">
+    <div>
+      <app-comment-form
+        placeholder="Write your reply"
+        buttonText="Send"
+        (formSubmitted)="createComment($event)"
+      ></app-comment-form>
+    </div>
   </section>
-  
+  <section class="nested-comments" *ngIf="isExpand()">
+    <app-comment
+      [comment]="Nestedcomment"
+      *ngFor="let Nestedcomment of nestedComment(); trackBy: commentTrackBy"
+    ></app-comment>
+  </section>
 </article>
